# nenupy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  MANIFEST.in  README.md  profile.html  pyproject.toml  requirements.txt  setup.py  todo.txt
docs/: Makefile  beam_simulation.rst  bst_tutorial.rst  changelog.rst  conf.py  index.rst  install.rst  make.bat  modules.rst  nenupy.astro.astro.rst  nenupy.astro.astro_tools.rst  nenupy.astro.beam_correction.rst  nenupy.astro.hpxsky.rst  nenupy.astro.jones_mueller.rst  nenupy.astro.pointing.rst  nenupy.astro.rst  nenupy.astro.sky.rst  nenupy.astro.skymodel.rst  nenupy.astro.target.rst  nenupy.astro.uvw.rst  nenupy.astro_old.astro.rst  nenupy.astro_old.hpxsky.rst  nenupy.astro_old.rst  nenupy.base.rst  nenupy.beam.beam.rst  nenupy.beam.hpxbeam.rst  nenupy.beam.hpxbeam_utils.rst  nenupy.beam.rst  nenupy.beamlet.beamlet.rst  nenupy.beamlet.bstdata.rst  nenupy.beamlet.rst  nenupy.beamlet.sdata.rst  nenupy.beamlet.sstdata.rst  nenupy.crosslet.crosslet.rst  nenupy.crosslet.imageprod.rst  nenupy.crosslet.nearfield.rst  nenupy.crosslet.rst  nenupy.crosslet.tvdata.rst  nenupy.crosslet.uvw.rst  nenupy.crosslet.xstdata.rst  (+53 more)
nenupy/: __init__.py  base.py  metadata.py  miscellaneous.py  telescopes.json
nenupy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nenupy3/: __init__.py
nenupysim/: __init__.py
notebooks/: nenupy.ipynb
tests/: test_astro.py  test_astro_func.py  test_astro_pointing.py  test_astro_sky.py  test_astro_skymodel.py  test_astro_target.py  test_astro_tools.py  test_beam.py  test_database.py  test_hpxbeam.py  test_hpxsky.py  test_instru.py  test_instru_miniarray.py  test_instru_nenufar.py  test_io_bst.py  test_io_tf.py  test_io_undysputed.py  test_io_xst.py  test_jones_mueller.py  test_obsconfig.py  test_schedule_constraints.py  test_sdata.py  test_skymodel.py  test_uvw.py  test_xstdata.py
(+466 files in other folders)
